# ycetl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  flake.nix
doc/: example.md  overview.md  template_rebind.md
examples/webgpu/: .gitignore  CMakeLists.txt  README.md  common.py  main.py  pyproject.toml  webgpu_emit_py.cpp  webgpu_introspect.cpp  webgpu_tree_check.cpp
examples/webgpu/dawn/: webgpu_ctypes_check.py
examples/webgpu/dawn/app/: README.md  app.py  interactive.py  plasma.wgsl
examples/webgpu/dawn/include/: webgpu.h
examples/webgpu/native/: webgpu_ctypes_check.py
examples/wgpu_glue/: CMakeLists.txt  wgpu_ctypes_check.py  wgpu_introspect.cpp  wgpu_tree_check.cpp
examples/yce/: CMakeLists.txt  CMakePresets.json  compile_time_nested_tree.cpp  compile_time_primes.cpp  multitype_handler.cpp  multitype_storage.cpp
include/ycetl/: algorithm.hpp  allocator.hpp  allocator_base.hpp  allocator_defs.hpp  allocator_traits.hpp  array.hpp  basic_string.hpp  bitset.hpp  cstddef.hpp  cstring.hpp  darray.hpp  deque.hpp  details.hpp  dynamic_arena.hpp  dynamic_array.hpp  dynamic_storage.hpp  dynamic_storage_obsolete.hpp  factory.hpp  forward_list.hpp  hash.hpp  hive.hpp  inplace_vector.hpp  list.hpp  map.hpp  memory.hpp  memory_utils.hpp  misc.hpp  multimap.hpp  multiset.hpp  multitype.hpp  multitype_handler.hpp  multitype_memory.hpp  multitype_storage.hpp  object.hpp  object_pool.hpp  priority_queue.hpp  queue.hpp  random.hpp  relevant_types.hpp  set.hpp  (+32 more)
include/ycetl/impl/: allocator.hpp  container.hpp  container_traits.hpp  dynamic_allocator.hpp  dynamic_memory.hpp  dynamic_storage.hpp  dynamic_storage_obsolete.hpp  multitype.hpp  multitype_allocator.hpp  multitype_handler.hpp  multitype_memory.hpp  multitype_memory_wrapped.hpp  multitype_storage.hpp  static_memory.hpp  type_printer.hpp  typed_dynamic_memory.hpp  typed_static_memory.hpp
include/ycetl/obsolete/: allocator.obsolete.hpp  vector.old.hpp
test/: CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  _test_dynamic_arena.cpp  _test_dynamic_arena_manual.cpp  _test_trace.cpp  _test_typelist.1.cpp  allocation_propagation.md  allocation_propagation_2.md  cindex.cpp  cmake_install.cmake  helper.hpp  out.cpp  out.hpp  t.cpp  test.cpp  test_allocator.cpp  test_allocator_propagation.cpp  test_allocator_propagation_solution1.cpp  test_allocator_propagation_solution2.cpp  test_allocator_propagation_solution3.cpp  test_allocator_propagation_solution4.cpp  test_boost_ut.cpp  test_compile_time_random.cpp  test_compute_rodata_size.cpp  test_list_tail.cpp  test_m_storage.cpp  test_memory.cpp  test_memory_downgrade.cpp  test_multitype.cpp  test_multitype_storage.cpp  test_object_pool.cpp  test_object_pool_boost_ut.cpp  test_relevant_types.cpp  test_relevant_types_2.cpp  test_rom_arena.cpp  test_simple.cpp  test_std_allocator.cpp  test_string.cpp  test_template_rebinder.cpp  (+8 more)
unit_test/: CMakeLists.txt  CMakePresets.json  test_set.cpp  test_vector.cpp
unit_test/compiler/: CMakeLists.txt  CMakePresets.json  test_1.cpp  watch-and-build
unit_test/concepts/: CMakeLists.txt  CMakePresets.json  README.md  test_simple.cpp  test_template_info.cpp  watch-and-build
unit_test/containers/: CMakeLists.txt  CMakePresets.json  test_basic_string.cpp  test_basic_string_return.cpp  test_basic_string_with_memory.cpp  test_basic_string_with_static_memory.cpp  test_bitset.cpp  test_container.cpp  test_deque.cpp  test_dynamic_array.cpp  test_dynamic_array_1.cpp  test_dynamic_array_2.cpp  test_dynamic_array_iterator.cpp  test_dynamic_array_static_memory.cpp  test_dynamic_memory.cpp  test_forward_list.cpp  test_hive.cpp  test_inplace_vector.cpp  test_list.cpp  test_map.cpp  test_multimap.cpp  test_multiset.cpp  test_nested_dynamic_array.cpp  test_priority_queue.cpp  test_queue.cpp  test_set.cpp  test_simple.cpp  test_span.cpp  test_stack.cpp  test_string.cpp  test_unique_ptr.cpp  test_unordered_map.cpp  test_unordered_multimap.cpp  test_unordered_multiset.cpp  test_unordered_set.cpp  test_vector.cpp  test_weak_ptr.cpp
unit_test/types/: CMakeLists.txt  CMakePresets.json  test_apply_wrapper.cpp  test_container.cpp  test_container_metamorphosis.cpp  test_dynamic_memory.cpp  test_memory_downgrade.cpp  test_multitype_dynamic_memory.cpp  test_multitype_handler_downgrade.cpp  test_multitype_memory.cpp  test_multitype_memory_01.cpp  test_multitype_static_memory.cpp  test_rebindable_template.cpp  test_template_rebind.cpp  test_trivial_shared_ptr.cpp  test_type_set.cpp  test_typed_dynamic_memory.cpp  test_typed_static_memory.cpp  watch-and-build
unit_test/unused/: test_memory_propagation.cpp  test_rebind_memory.cpp  test_rebind_template.cpp  test_rebind_template_simple.cpp  test_template_rebind_independently.cpp
